fix: no more gap under canvas, better opacity handling, changed default settings

--- a/components/Waves/Waves.module.scss
+++ b/components/Waves/Waves.module.scss
@@ -1,4 +1,4 @@
 .canvas {
   z-index: 1;
-  background: white;
+  display: block;
 }
